--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     ]
   },
   "devDependencies": {
-    "@webpack-cli/generators": "^3.0.1",
     "css-loader": "^6.7.2",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "eslint-config-airbnb": "^19.0.4",
@@ -57,10 +56,7 @@
     "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
-    "typescript": "^4.9.3",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "typescript": "^4.9.3"
   },
   "description": ""
 }
